force-app/main/default/objects/Invoice__c/fields/QuickBookId__c.field-meta.xml
<CustomField>
    <fullName>QuickBookId__c</fullName>
    <externalId>true</externalId>
    <label>QuickBook Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>