force-app/main/default/objects/Invoice__c/fields/QuickBookSyncToken__c.field-meta.xml
<CustomField>
    <fullName>QuickBookSyncToken__c</fullName>
    <label>QuickBook Sync Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>