force-app/main/default/objects/Invoice__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due in 15 days</fullName>
            </value>
            <value>
                <fullName>Due in 30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>